--- a/Css/style.css
+++ b/Css/style.css
@@ -41,3 +41,23 @@
     border: 2px solid rgba(255, 255, 255, 0.164);
     transition: 0.2s;
 }
+.second-sec{
+    margin: 100px 200px;
+}
+.blog-1, .blog-2{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 100px;
+}
+.bolog-1text, .bolog-2text{
+    width: 400px;
+}
+.bolog-1text h1, .bolog-2text h1{
+    font-weight: 600;
+    font-size: 40px;
+}
+.bolog-1text p, .bolog-2text p{
+    color: rgba(100, 101, 102, 0.562);
+    font-size: 30px;
+}
